All_Component_DX/force-app/main/default/objects/Offline_Dataset_Expression__c/Offline_Dataset_Expression__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This Object is used to save the expressions of criteria to download, lock or archival the records in offline application</description>
    <label>Offline Dataset Expression</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offline Dataset Expressions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>