All_Component_DX/force-app/main/default/objects/Offline_Dataset_Expression__c/fields/Offline_Object__c.field-meta.xml
<CustomField>
    <fullName>Offline_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Offline Object to which this object belongs</description>
    <inlineHelpText>Offline Object to which this object belongs</inlineHelpText>
    <label>Offline Object</label>
    <referenceTo>Offline_Object__c</referenceTo>
    <relationshipName>Offline_Dataset_Expression</relationshipName>
    <type>Lookup</type>
</CustomField>