All_Component_DX/force-app/main/default/objects/Offline_Dataset_Expression__c/fields/Operand__c.field-meta.xml
<CustomField>
    <fullName>Operand__c</fullName>
    <description>This field saves the value to filter the data.</description>
    <inlineHelpText>This field saves the value to filter the data.</inlineHelpText>
    <label>Operand</label>
    <length>80</length>
    <type>Text</type>
</CustomField>