All_Component_DX/force-app/main/default/objects/Offline_Dataset_Expression__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>This is the list of the operators to select while selecting the criteria.</description>
    <inlineHelpText>This is the list of the operators to select while selecting the criteria.</inlineHelpText>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>eq</fullName>
            </value>
            <value>
                <fullName>ne</fullName>
            </value>
            <value>
                <fullName>gt</fullName>
            </value>
            <value>
                <fullName>ge</fullName>
            </value>
            <value>
                <fullName>lt</fullName>
            </value>
            <value>
                <fullName>le</fullName>
            </value>
            <value>
                <fullName>starts</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
            <value>
                <fullName>notcontain</fullName>
            </value>
            <value>
                <fullName>in</fullName>
            </value>
            <value>
                <fullName>notin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>