All_Component_DX/force-app/main/default/objects/Offline_Dataset_Expression__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Indicates the type of Criteria</description>
    <inlineHelpText>Indicates the type of Criteria</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Download Criteria</fullName>
            </value>
            <value>
                <fullName>Archival Criteria</fullName>
            </value>
            <value>
                <fullName>Lock Criteria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>